# TouDoum-Framework

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  TouDoum.py  TouDoumClient.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  test.py
.github/workflows/: build-dev.yml  develop-build.yml  develop-check.yml
.run/: ServiceDeps.run.xml  django.run.xml
client/: Api.py  ModuesLoader.py  PluginManager.py  TouDoumClient.py
client/core/: Api.py  Client.py  ModuesLoader.py  Singleton.py  TouDoumWorker.py  client_exec_task.py  tasks.py
config/: enabled_plugins  rabbitmq.conf
core/manager/: PluginManager.py
docs/: API.md  known_issues.md
message/: Dockerfile  rabbitmq.config  readme.md
modules/example/: admin.py  apps.py  serializers.py
plugins/: ExamplePlugin.py
server/: celery.py  gunicorn-cfg.py  settings.py  urls.py
server/api/: ErrorCode.py  TokenAuthMiddleware.py  admin.py  apps.py  models.py  next.py  serializers.py  urls.py  utils.py  views.py
server/authentication/: apps.py  forms.py  models.py  urls.py  views.py
server/cluster/: admin.py  apps.py  models.py  urls.py
server/core/: ErrorCode.py  ModuleManager.py  PluginManager.py  ResultManager.py  TokenAuthentication.py  static.py
server/modules/: ModuleManager.py  admin.py  apps.py  models.py  urls.py  views.py
server/mq_auth/: apps.py  urls.py  views.py
server/panel/: admin.py  apps.py  models.py  tests.py  urls.py  views.py  views_base.py
server/templates/: icons.html  index.html  login.html  maps.html  page-403.html  (+4 more)
utils/: celery.py  files.py
(+92 files in other folders)
